    - This branch adds named sessions starting with an underscore also as
      hidden sessions in alternative to named sessions starting with a dot,
      since tmux doesn't support session names starting with a dot. In the
      process it also adds support for hidden session in tmux if the
      session names start with an underscore, adding this feature to tmux
      based byobu.

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Jul 2014 09:12:13 +0100

byobu (5.84-0ubuntu1) utopic; urgency=medium

  * usr/lib/byobu/include/dirs.in:
    - make the custom scripts bin dir
  * usr/lib/byobu/custom:
    - ensure we clear the cache for custom scripts
  * usr/bin/byobu-status.in:
    - restore the ability to toggle date and time on and off from the config
      interface, as well as hand editing the config file

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Jul 2014 09:12:11 +0100

byobu (5.83-0ubuntu1) utopic; urgency=medium

  [ Dustin Kirkland ]
  * usr/bin/byobu-config.in: LP: #1316050
    - hard code LANG=C before launching byobu-config
  * usr/lib/byobu/include/dirs.in: LP: #1346869
    - be little smarter about detecting a usable /dev/shm
  * === added directory usr/share/appdata,
    usr/share/appdata/byobu.appdata.xml: LP: #1322556
  * usr/share/byobu/profiles/tmuxrc: LP: #1315204
    - fix a couple of spots that should use $BYOBU_CONFIG_DIR
  * usr/lib/byobu/apport: LP: #1308696
    - clear out the apport cache files, to detect when the crashes
      have been cleared

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 26 Jul 2014 16:13:20 -0500

byobu (5.82-0ubuntu1) utopic; urgency=medium

  * usr/bin/byobu-ctrl-a.in:
    - add bindkey line back, this line is *essential*; there was a
      syntax error in it previously, but removing the line was not
      the correct fix for LP: #1313209, #814172

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 22 Jul 2014 07:21:54 -0700

byobu (5.81-0ubuntu1) utopic; urgency=medium
